# CodeAssist

./: .gitignore  Dockerfile  README.md  analytics.json  pyproject.toml  railway.json  requirements.txt
codeassist/: __init__.py
codeassist/api/: __init__.py  main.py  models.py
codeassist/api/routes/: __init__.py  completion.py  explanation.py  review.py
codeassist/cli/: __init__.py  commands.py
codeassist/models/: __init__.py  llm_client.py
codeassist/services/: __init__.py  analytics.py  completer.py
